overflow fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,13 +18,11 @@ body {
   }
   body h1 {
     font-size: 1.5rem;
-    overflow-x: hidden;
   }
 }
 
 h1{
   font-size: 2rem;
-  overflow-x: hidden;
 }
 
 h1 a {
