--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -32,7 +32,6 @@
   padding-bottom: 0.5rem;
   margin-bottom: 4rem;
   font-family: $sans-serif-font-family;
-  overflow-x: hidden;
 }
 
 .header a:hover {
